<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.onurb.playlistrecommender.MainScreenActivity">

    <LinearLayout
        android:id="@+id/headline_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1.2">

        <TextView
            android:id="@+id/header_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/main_header"
            android:textSize="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="#7F96FF">
        <LinearLayout
            android:id="@+id/ll1_image_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/weather_icon_128" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll1_text_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/weather_string"
                android:textSize="25dp"
                />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="#F2AF29">
        <LinearLayout
            android:id="@+id/lL2_image_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/mood_icon_128" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll2_text_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/mood_string"
                android:textSize="25dp"
                />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="#A20021">
        <LinearLayout
            android:id="@+id/ll3_image_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:src="@drawable/image_icon_128" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll3_text_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/image_string"
                android:textSize="25dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
